# panorama_uwu-3

./: .dockerignore  .env  .gitignore  DEPLOY.md  Dockerfile  README.md  auth.py  database.py  docker-compose.yml  index.html  main.py  nginx.conf  pyproject.toml  tree_output.txt  users.db  utils.py
.qwen/: settings.json
esoft_front/: cart.html  podborka.html
esoft_front/js/: ai-vitrina.js  auth-modal.js  cart.js  podborka.js
front/: about.html  index.html  pres_add.html  profile.html
front/css/: pres_add.css  profile.css  style.css
front/js/: auth.js  pres_add.js  profile.js  script.js
json/: client.json  log.json  manager_con.json  present_promt_input.json  url_input.json
models/: parse_response.py  pdf.py  point.py  room.py  user.py
prod/presenton/app_data/: fastapi.db  userConfig.json  userConfig.json.bak
prod/presenton/app_data/mem0/: history.db
prod/presenton/app_data/mem0/qdrant/collection/presenton_memories/: storage.sqlite
routs/: link_rout.py  pdf_rout.py  point_rout.py  presa_pr_rout.py  rooms.py  rooms_rout.py  user_rout.py
schemas/: rooms.py  user.py
services/: parse.py  presa_prompt.py  user_services.py
