[project]
name = "panorama-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.138.2",
    "loging>=0.0.1",
    "openai>=2.44.0",
    "passlib>=1.7.4",
    "perplexityai>=0.39.0",
    "pillow>=10.0.0",
    "playwright>=1.61.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "typing>=3.10.0.0",
    "unicorn>=2.1.4",
    "uvicorn>=0.49.0",
]
